--- a/concepttest-app/public/views/nav.html
+++ b/concepttest-app/public/views/nav.html
@@ -1,20 +1,14 @@
 <!-- Site nav (vertical) -->
 
 <nav class="site-nav clearfix" role="navigation" collapse-nav-accordion highlight-active>
-	<div class="nav-title panel-heading"><i>Administraci&oacute;n</i></div>
-	<ul class="list-unstyled nav-list">
-		<li>
-			<a href="javascript:;">
-				<i class="fa fa-table icon"></i>
-				<span class="text">L&iacute;neas de carrera</span>
-				<i class="arrow fa fa-angle-right right"></i>
-			</a>
-			<ul class="inner-drop list-unstyled" style="display: block;">
-				<li><a href="#/admin/skillTypes">Tipos de competencia</a></li>
-				<li><a href="#/admin/skills">Competencias</a></li>
-				<li><a href="#/admin/skillLevels">Niveles de competencia</a></li>
-				<li><a href="#/admin/positions">Cargos</a></li>
-			</ul>
-		</li>
-	</ul>
+ <div class="nav-title panel-heading"><i>Administraci&oacute;n</i></div>
+ <ul class="list-unstyled nav-list">
+  <li>
+   <a href="#/admin/manageSkills">
+	<i class="fa fa-table icon"></i>
+	<span class="text">Competencias</span>
+	<i class="arrow fa fa-angle-right right"></i>
+   </a>
+  </li>
+ </ul>
 </nav>
