Se agrego titulos a cada tabla

--- a/concepttest-app/public/views/admin/skillLevels.html
+++ b/concepttest-app/public/views/admin/skillLevels.html
@@ -1,6 +1,6 @@
 <div class="panel panel-lined table-responsive mb30"  ng-controller="ListSkillLevels">
+ <div class="panel-heading"><i>Niveles de competencia</i></div>
  <div class="panel-body">
-  
   <form class="form-horizontal left col-lg-4" name="skillLevelForm" action="#/admin/newSkillLevel">
 	<button type="submit" class="btn btn-default">Nuevo</button>
   </form>
