--- a/concepttest-app/public/views/admin/skills.html
+++ b/concepttest-app/public/views/admin/skills.html
@@ -1,5 +1,6 @@
 <div class="panel panel-lined table-responsive mb30 " ng-controller="ListSkills">
-
+ <div class="panel-heading"><i>Competencias</i></div>
+ 
  <!--Listado de competencias -->
  <div class="panel-body">
 
