--- a/concepttest-app/public/views/admin/skillTypes.html
+++ b/concepttest-app/public/views/admin/skillTypes.html
@@ -1,4 +1,5 @@
 <div class="panel panel-lined table-responsive mb30" ng-controller="ListSkillTypes">
+ <div class="panel-heading"><i>Tipos de competencia</i></div>
  <div class="panel-body">
   <form class="form-horizontal left col-lg-4" name="skillTypeForm" action="#/admin/newSkillType">
    <button type="submit" class="btn btn-default">Nuevo</button>
