--- a/concepttest-app/public/views/admin/skills.html
+++ b/concepttest-app/public/views/admin/skills.html
@@ -79,4 +79,35 @@
   </form>
  </modal>
 
+ <!-- Edicion de competencia -->
+ <modal title="Edici&oacute;n de competencia" visible="showEdit" data-backdrop="static">
+  <form role="form" name="editSkillForm" ng-controller="EditSkill" ng-submit="save(editSkillForm.$valid)" novalidate>
+   <input type="hidden" name="id" class="form-control" ng-model="skill._id"/>
+   <div class="form-group" ng-class="{'has-error' : editSkillForm.name.$invalid && !editSkillForm.name.$pristine}">
+    <label class="text-uppercase small text-bold">Nombre:</label>
+    <input type="text" name="name" class="form-control" ng-model="skill.name" required>
+    <p ng-show="editSkillForm.name.$invalid && !editSkillForm.name.$pristine" class="help-block">El nombre es requerido.</p>
+   </div>
+   <div class="form-group" ng-class="{'has-error' : editSkillForm.description.$invalid && !editSkillForm.description.$pristine}">
+    <label class="text-uppercase small text-bold">Descripci&oacute;n:</label>
+    <input type="text" name="description" class="form-control" ng-model="skill.description" required>
+    <p ng-show="editSkillForm.description.$invalid && !editSkillForm.description.$pristine" class="help-block">La descripci&oacute;n es requerida.</p>
+   </div>
+   <div class="form-group" ng-class="{'has-error' : editSkillForm.type.$invalid && !editSkillForm.type.$pristine}">
+    <label class="text-uppercase small text-bold">Tipo:</label>
+    <select name="type"
+      class="form-control" 
+      ng-model="skill.type"
+      ng-options="skillType._id as skillType.name for skillType in skillTypes" 
+      required>
+     <option value="">Selecciona un tipo</option> 
+    </select>
+    <p ng-show="editSkillForm.type.$invalid && !editSkillForm.type.$pristine" class="help-block">El tipo es requerido.</p>
+   </div>
+   <div class="form-group">
+    <button type="submit" class="btn btn-default" ng-disabled="editSkillForm.$invalid">Editar</button> 
+    <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancelar</button> 
+   </div>
+  </form>
+ </modal>
 </div>
