Se terminó caso de uso de administración de competencias

--- a/concepttest-app/public/views/admin/manageSkills.html
+++ b/concepttest-app/public/views/admin/manageSkills.html
@@ -9,15 +9,16 @@
 
  <div class="page-wrap">
   <div class="row">
+   <!-- Administracion de niveles de competencia -->
+   <div class="col-lg-12" ng-include=" 'views/admin/skillLevels.html' "></div>
+  </div>
+  <div class="row">
    <!-- Administracion de competencias -->
    <div class="col-lg-12" ng-include=" 'views/admin/skills.html' "></div>
   </div>
   <div class="row">
-   <!-- Administracion de niveles de competencia -->
-   <div class="col-lg-6" ng-include=" 'views/admin/skillLevels.html' "></div>
    <!-- Administracion de tipos de competencia -->
-   <div class="col-lg-6" ng-include=" 'views/admin/skillTypes.html' "></div>
+   <div class="col-lg-12" ng-include=" 'views/admin/skillTypes.html' "></div>
   </div>
-
  </div>
 </div>
