Se agrego menu para administracion de cargos

--- a/concepttest-app/public/views/nav.html
+++ b/concepttest-app/public/views/nav.html
@@ -1,11 +1,16 @@
-<!-- Site nav (vertical) -->
-
 <nav class="site-nav clearfix" role="navigation" collapse-nav-accordion highlight-active>
  <div class="nav-title panel-heading"><i>Administraci&oacute;n</i></div>
  <ul class="list-unstyled nav-list">
   <li>
+   <a href="#/admin/managePositions">
+	<i class="fa fa-group icon"></i>
+	<span class="text">Cargos</span>
+	<i class="arrow fa fa-angle-right right"></i>
+   </a>
+  </li>
+  <li>
    <a href="#/admin/manageSkills">
-	<i class="fa fa-table icon"></i>
+	<i class="fa fa-gears icon"></i>
 	<span class="text">Competencias</span>
 	<i class="arrow fa fa-angle-right right"></i>
    </a>
