--- a/concepttest-app/public/styles/main.less
+++ b/concepttest-app/public/styles/main.less
@@ -10,30 +10,30 @@
 @import "sections/nav-min.less";
 @import "sections/nav-off-canvas.less";
 @import "sections/layout.less";
-@import "sections/body-full.less";
+//@import "sections/body-full.less";
 @import "sections/page.less";
-@import "sections/theme-settings.less";
-@import "sections/nav-horizontal.less";
+//@import "sections/theme-settings.less";
+//@import "sections/nav-horizontal.less";
 
 
 // Import Pages
-@import "pages/dashboard-v1.less";
-@import "pages/dashboard-v2.less";
-@import "pages/form-wizard.less";
+//@import "pages/dashboard-v1.less";
+//@import "pages/dashboard-v2.less";
+//@import "pages/form-wizard.less";
 @import "pages/auth.less";
-@import "pages/lock-screen.less";
+//@import "pages/lock-screen.less";
 @import "pages/err.less";
-@import "pages/invoice.less";
-@import "pages/timeline.less";
-@import "pages/profile.less";
-@import "pages/search.less";
-@import "pages/projects.less";
-@import "pages/project-detail.less";
+//@import "pages/invoice.less";
+//@import "pages/timeline.less";
+//@import "pages/profile.less";
+//@import "pages/search.less";
+//@import "pages/projects.less";
+//@import "pages/project-detail.less";
 
 
 // Import Email Style
-@import "email/inbox.less";
-@import "email/compose.less";
+//@import "email/inbox.less";
+//@import "email/compose.less";
 
 
 /// Import Plugins styles
