--- a/concepttest-app/public/views/admin/managePositions.html
+++ b/concepttest-app/public/views/admin/managePositions.html
@@ -10,8 +10,8 @@
  <div class="page-wrap">
   <div class="row">
    <div class="col-lg-12">
-	<div class="panel panel-lined table-responsive mb30" ng-controller="ListPositions">
-	 <div class="panel-body">
+	  <div class="panel panel-lined table-responsive mb30" ng-controller="ListPositions">
+	   <div class="panel-body">
 
   	  <form class="form-horizontal left col-lg-4">
    	   <button ng-click="toggleNew()" class="btn btn-default">Nuevo</button>
@@ -20,142 +20,242 @@
   	  <form class="form-horizontal right col-lg-4">
    	   <input type="text" class="form-control input-sm" placeholder="Buscar..." data-ng-model="searchKeywords" data-ng-keyup="search()">
   	  </form>
-	 </div>
+	   </div>
 
-	 <table class="table table-bordered table-striped">
-	  <thead>
-	   <tr>
-		<th>Nombre
-		 <div class="th">
-		  <i class="fa fa-caret-up icon-up" ng-click=" order('name') " -class="{active: row == 'name'}"></i>
-		  <i class="fa fa-caret-down icon-down" ng-click=" order('-name') " ng-class="{active: row == '-name'}"></i>
-		 </div>
-		</th>
-		<th>Descripci&oacute;n
-		 <div class="th">
-		  <i class="fa fa-caret-up icon-up" ng-click=" order('description') " ng-class="{active: row == 'description'}"></i>
-		  <i class="fa fa-caret-down icon-down" ng-click=" order('-description') " ng-class="{active: row == '-description'}"></i>
-		 </div>
-		</th>
-	   </tr>
-	  </thead>
-	  <tbody>
-	   <tr ng-repeat="data in currentPageStores track by $index">
-		<td>{{data.name}}</td>
-		<td>{{data.description}}</td>
-	   </tr>
-	  </tbody>
-	 </table>
+	   <table class="table table-bordered table-striped">
+	    <thead>
+	     <tr>
+		    <th>Nombre
+		     <div class="th">
+		      <i class="fa fa-caret-up icon-up" ng-click=" order('name') " -class="{active: row == 'name'}"></i>
+		      <i class="fa fa-caret-down icon-down" ng-click=" order('-name') " ng-class="{active: row == '-name'}"></i>
+		     </div>
+		    </th>
+		    <th>Descripci&oacute;n
+		     <div class="th">
+		      <i class="fa fa-caret-up icon-up" ng-click=" order('description') " ng-class="{active: row == 'description'}"></i>
+		      <i class="fa fa-caret-down icon-down" ng-click=" order('-description') " ng-class="{active: row == '-description'}"></i>
+		     </div>
+		    </th>
+        <th></th>
+        <th></th>
+	     </tr>
+	    </thead>
+	    <tbody>
+	     <tr ng-repeat="data in currentPageStores track by $index">
+		    <td>{{data.name}}</td>
+		    <td>{{data.description}}</td>
+        <td><a href ng-click="toggleEdit(data._id)">Modificar</a></td>
+        <td><a href ng-click="delete(data._id)">Eliminar</a></td>
+	     </tr>
+	    </tbody>
+	   </table>
 
-	 <div class="panel-footer clearfix">
-	  <p class="left mt15 small">
-	   Showing {{currentPageStores.length*(currentPage - 1) + 1}} to {{currentPageStores.length*currentPage}} of {{datas.length}} entries
-	  </p>
-	  <pagination boundary-links="true" total-items="filteredData.length" ng-model="currentPage" class="pagination-sm right" 
+	   <div class="panel-footer clearfix">
+	    <p class="left mt15 small">
+	     Showing {{currentPageStores.length*(currentPage - 1) + 1}} to {{currentPageStores.length*currentPage}} of {{datas.length}} entries
+	    </p>
+	    <pagination boundary-links="true" total-items="filteredData.length" ng-model="currentPage" class="pagination-sm right" 
 				max-size="5" ng-change="select(currentPage)" items-per-page="numPerPage" rotate="false"
 				previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
-	  </pagination>
-	 </div>
+	    </pagination>
+	   </div>
 
- 	 <!-- Registro de cargo -->
- 	 <modal title="Registro de cargo" size="modal-lg" visible="showNew" data-backdrop="static">
- 	  <form role="form" name="newPositionForm" ng-controller="NewPosition" ng-init="init()"  ng-submit="save(newPositionForm.$valid)" novalidate>
+ 	   <!-- Registro de cargo -->
+ 	   <modal title="Registro de cargo" size="modal-lg" visible="showNew" data-backdrop="static">
+ 	    <form role="form" name="newPositionForm" ng-controller="NewPosition" ng-init="init()"  ng-submit="save(newPositionForm.$valid)" novalidate>
    	   <div class="form-group" ng-class="{'has-error' : newPositionForm.name.$invalid && !newPositionForm.name.$pristine}">
-    	<label class="text-uppercase small text-bold">Nombre:</label>
-    	<input type="text" name="name" class="form-control" ng-model="position.name" required>
-    	<p ng-show="newPositionForm.name.$invalid && !newPositionForm.name.$pristine" class="help-block">El nombre es requerido.</p>
+    	  <label class="text-uppercase small text-bold">Nombre:</label>
+    	  <input type="text" name="name" class="form-control" ng-model="position.name" required>
+    	  <p ng-show="newPositionForm.name.$invalid && !newPositionForm.name.$pristine" class="help-block">El nombre es requerido.</p>
    	   </div>
    	   <div class="form-group" ng-class="{'has-error' : newPositionForm.description.$invalid && !newPositionForm.description.$pristine}">
-    	<label class="text-uppercase small text-bold">Descripci&oacute;n:</label>
-    	<input type="text" name="description" class="form-control" ng-model="position.description" required>
-    	<p ng-show="newPositionForm.description.$invalid && !newPositionForm.description.$pristine" class="help-block">La descripci&oacute;n es requerida.</p>
+    	  <label class="text-uppercase small text-bold">Descripci&oacute;n:</label>
+    	  <input type="text" name="description" class="form-control" ng-model="position.description" required>
+    	  <p ng-show="newPositionForm.description.$invalid && !newPositionForm.description.$pristine" class="help-block">La descripci&oacute;n es requerida.</p>
    	   </div>
    	   <div class="form-group" ng-class="{'has-error' : newPositionForm.overallGoal.$invalid && !newPositionForm.overallGoal.$pristine}">
-    	<label class="text-uppercase small text-bold">Objetivo general:</label>
-    	<input type="textarea" style="height: 80px;" name="overallGoal" class="form-control" ng-model="position.overallGoal" required>
-    	<p ng-show="newPositionForm.overallGoal.$invalid && !newPositionForm.overallGoal.$pristine" class="help-block">El objetivo general es requerido.</p>
+    	  <label class="text-uppercase small text-bold">Objetivo general:</label>
+    	  <input type="textarea" style="height: 80px;" name="overallGoal" class="form-control" ng-model="position.overallGoal" required>
+    	  <p ng-show="newPositionForm.overallGoal.$invalid && !newPositionForm.overallGoal.$pristine" class="help-block">El objetivo general es requerido.</p>
    	   </div>
    	   <div class="form-group" ng-class="{'has-error' : newPositionForm.specificGoal.$invalid && !newPositionForm.specificGoal.$pristine}">
-    	<label class="text-uppercase small text-bold">Objetivo espec&iacute;fico:</label>
-    	<input type="textarea" style="height: 80px;" name="specificGoal" class="form-control" ng-model="position.specificGoal" required>
-    	<p ng-show="newPositionForm.specificGoal.$invalid && !newPositionForm.specificGoal.$pristine" class="help-block">El objetivo espec&iacute;fico es requerido.</p>
+    	  <label class="text-uppercase small text-bold">Objetivo espec&iacute;fico:</label>
+    	  <input type="textarea" style="height: 80px;" name="specificGoal" class="form-control" ng-model="position.specificGoal" required>
+    	  <p ng-show="newPositionForm.specificGoal.$invalid && !newPositionForm.specificGoal.$pristine" class="help-block">El objetivo espec&iacute;fico es requerido.</p>
    	   </div>
 
    	   <div class="panel panel-lined table-responsive mb30 ">
         <div class="panel-heading"><i>Competencias disponibles</i></div>
-   	    
    	    <table class="table table-bordered table-striped">
    	   	 <thead>
-	      <th>Nombre
-	       <div class="th">
-	  	    <i class="fa fa-caret-up icon-up" ng-click=" order('name')" ng-class="{active: row == 'name'}"></i>
-	  	    <i class="fa fa-caret-down icon-down" ng-click=" order('-name')" ng-class="{active: row == '-name'}"></i>
-	 	   </div>
-		  </th>
-		  <th></th>
+	        <th>Nombre
+	         <div class="th">
+	  	      <i class="fa fa-caret-up icon-up" ng-click=" order('name')" ng-class="{active: row == 'name'}"></i>
+	  	      <i class="fa fa-caret-down icon-down" ng-click=" order('-name')" ng-class="{active: row == '-name'}"></i>
+	 	       </div>
+		      </th>
+		      <th></th>
    	   	 </thead>
    	   	 <tbody>
           <tr ng-repeat="availableSkill in availableCurrentPageStores track by $index">
-		   <td>{{availableSkill.name}}</td>
-		   <td><a href ng-click="add($index, availableSkill._id)">Agregar</a></td>
+		       <td>{{availableSkill.name}}</td>
+		       <td>
+            <a href ng-click="add($index, availableSkill._id)">Agregar</a>
+           </td>
           </tr>
    	   	 </tbody>
    	    </table>
 
-		<div class="panel-footer clearfix">
-		 <p class="left mt15 small">
-		  Mostrando {{availableCurrentPageStores.length*(availableCurrentPage - 1) + 1}} a {{availableCurrentPageStores.length*availableCurrentPage}} de {{availableSkills.length}} registros
-		 </p>
-		 <pagination boundary-links="true" total-items="availableFilteredData.length" ng-model="availableCurrentPage" class="pagination-sm right" 
+		    <div class="panel-footer clearfix">
+		     <p class="left mt15 small">
+		      Mostrando {{availableCurrentPageStores.length*(availableCurrentPage - 1) + 1}} a {{availableCurrentPageStores.length*availableCurrentPage}} de {{availableSkills.length}} registros
+		     </p>
+		     <pagination boundary-links="true" total-items="availableFilteredData.length" ng-model="availableCurrentPage" class="pagination-sm right" 
 					  max-size="5" ng-change="select(availableCurrentPage)" items-per-page="availableNumPerPage" rotate="false"
 					  previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
-		 </pagination>
-		</div>
-
+		     </pagination>
+		    </div>
    	   </div>
 
    	   <div class="panel panel-lined table-responsive mb30 ">
-        <div class="panel-heading"><i>Competencias seleccionadas</i></div>
-   	    
+        <div class="panel-heading"><i>Competencias seleccionadas</i></div> 
    	    <table class="table table-bordered table-striped">
    	   	 <thead>
-	      <th>Nombre
-	       <div class="th">
-	  	    <i class="fa fa-caret-up icon-up" ng-click=" order('name')" ng-class="{active: row == 'name'}"></i>
-	  	    <i class="fa fa-caret-down icon-down" ng-click=" order('-name')" ng-class="{active: row == '-name'}"></i>
-	 	   </div>
-		  </th>
-		  <th>Nivel requerido</th>
-		  <th></th>
+	        <th>Nombre
+	         <div class="th">
+	  	      <i class="fa fa-caret-up icon-up" ng-click=" order('name')" ng-class="{active: row == 'name'}"></i>
+	  	      <i class="fa fa-caret-down icon-down" ng-click=" order('-name')" ng-class="{active: row == '-name'}"></i>
+	 	       </div>
+		      </th>
+		      <th>Nivel requerido</th>
+		      <th></th>
    	   	 </thead>
    	   	 <tbody>
-          <tr ng-repeat="selectedSkill in selectedSkills track by $index">
-		   <td>
-    		<select name="id" class="form-control" ng-model="position.skill.id">
-     		 <option value="{{selectedSkill._id}}" selected>{{selectedSkill.name}}</option> 
-    		</select>
-		   </td>
-		   <td>
-    		<select name="level" class="form-control" ng-model="position.skill.level" ng-options="skillLevel._id as skillLevel.name for skillLevel in selectedSkill.levels" required>
-     		 <option value="">Selecciona un nivel</option> 
-    		</select>
-    		<p ng-show="newPositionForm.level.$invalid && !newPositionForm.level.$pristine" class="help-block">El nivel es requerido.</p>
-		   </td>
-		   <td><a href ng-click="remove($index)">Quitar</a></td>
+          <tr ng-repeat="(i, selectedSkill) in selectedSkills track by $index">
+           <td>
+           {{selectedSkill.name}}
+           <input type="hidden" name="skillId" ng-model="position.skills[i].skillId" required/>
+           </td>
+		       <td>
+    		    <select name="skillLevelId" class="form-control" ng-model="position.skills[i].skillLevelId" ng-options="skillLevel._id as skillLevel.name for skillLevel in selectedSkill.levels" required>
+     		     <option value="">Selecciona un nivel</option> 
+    		    </select>
+		       </td>
+		       <td>
+            <a href ng-click="remove($index)">Quitar</a>
+           </td>
           </tr>
+          <p ng-show="newPositionForm.level.$invalid && !newPositionForm.level.$pristine" class="help-block">El nivel es requerido.</p>
    	   	 </tbody>
    	    </table>
    	   </div>
 
    	   <div class="form-group">
-    	<button type="submit" class="btn btn-default" ng-disabled="newPositionForm.$invalid">Registrar</button> 
-    	<button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancelar</button> 
+    	  <button type="submit" class="btn btn-default" ng-disabled="newPositionForm.$invalid">Registrar</button> 
+    	  <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancelar</button> 
    	   </div>
 
- 	  </form>
- 	 </modal>
+ 	    </form>
+ 	   </modal>
 
-	</div>
+     <!-- Edicion de cargo -->
+     <modal title="Edici&oacute;n de cargo" size="modal-lg" visible="showEdit" data-backdrop="static">
+      <form role="form" name="editPositionForm" ng-controller="EditPosition" ng-submit="save(editPositionForm.$valid)" novalidate>
+       <div class="form-group" ng-class="{'has-error' : editPositionForm.name.$invalid && !editPositionForm.name.$pristine}">
+        <label class="text-uppercase small text-bold">Nombre:</label>
+        <input type="text" name="name" class="form-control" ng-model="position.name" required>
+        <p ng-show="editPositionForm.name.$invalid && !editPositionForm.name.$pristine" class="help-block">El nombre es requerido.</p>
+       </div>
+       <div class="form-group" ng-class="{'has-error' : editPositionForm.description.$invalid && !editPositionForm.description.$pristine}">
+        <label class="text-uppercase small text-bold">Descripci&oacute;n:</label>
+        <input type="text" name="description" class="form-control" ng-model="position.description" required>
+        <p ng-show="editPositionForm.description.$invalid && !editPositionForm.description.$pristine" class="help-block">La descripci&oacute;n es requerida.</p>
+       </div>
+       <div class="form-group" ng-class="{'has-error' : editPositionForm.overallGoal.$invalid && !editPositionForm.overallGoal.$pristine}">
+        <label class="text-uppercase small text-bold">Objetivo general:</label>
+        <input type="textarea" style="height: 80px;" name="overallGoal" class="form-control" ng-model="position.overallGoal" required>
+        <p ng-show="editPositionForm.overallGoal.$invalid && !editPositionForm.overallGoal.$pristine" class="help-block">El objetivo general es requerido.</p>
+       </div>
+       <div class="form-group" ng-class="{'has-error' : editPositionForm.specificGoal.$invalid && !editPositionForm.specificGoal.$pristine}">
+        <label class="text-uppercase small text-bold">Objetivo espec&iacute;fico:</label>
+        <input type="textarea" style="height: 80px;" name="specificGoal" class="form-control" ng-model="position.specificGoal" required>
+        <p ng-show="editPositionForm.specificGoal.$invalid && !editPositionForm.specificGoal.$pristine" class="help-block">El objetivo espec&iacute;fico es requerido.</p>
+       </div>
+
+       <div class="panel panel-lined table-responsive mb30 ">
+        <div class="panel-heading"><i>Competencias disponibles</i></div>
+        <table class="table table-bordered table-striped">
+         <thead>
+          <th>Nombre
+           <div class="th">
+            <i class="fa fa-caret-up icon-up" ng-click=" order('name')" ng-class="{active: row == 'name'}"></i>
+            <i class="fa fa-caret-down icon-down" ng-click=" order('-name')" ng-class="{active: row == '-name'}"></i>
+           </div>
+          </th>
+          <th></th>
+         </thead>
+         <tbody>
+          <tr ng-repeat="availableSkill in availableCurrentPageStores track by $index">
+           <td>{{availableSkill.name}}</td>
+           <td>
+            <a href ng-click="add($index, availableSkill._id)">Agregar</a>
+           </td>
+          </tr>
+         </tbody>
+        </table>
+
+        <div class="panel-footer clearfix">
+         <p class="left mt15 small">
+          Mostrando {{availableCurrentPageStores.length*(availableCurrentPage - 1) + 1}} a {{availableCurrentPageStores.length*availableCurrentPage}} de {{availableSkills.length}} registros
+         </p>
+         <pagination boundary-links="true" total-items="availableFilteredData.length" ng-model="availableCurrentPage" class="pagination-sm right" 
+            max-size="5" ng-change="select(availableCurrentPage)" items-per-page="availableNumPerPage" rotate="false"
+            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
+         </pagination>
+        </div>
+       </div>
+
+       <div class="panel panel-lined table-responsive mb30 ">
+        <div class="panel-heading"><i>Competencias seleccionadas</i></div> 
+        <table class="table table-bordered table-striped">
+         <thead>
+          <th>Nombre
+           <div class="th">
+            <i class="fa fa-caret-up icon-up" ng-click=" order('name')" ng-class="{active: row == 'name'}"></i>
+            <i class="fa fa-caret-down icon-down" ng-click=" order('-name')" ng-class="{active: row == '-name'}"></i>
+           </div>
+          </th>
+          <th>Nivel requerido</th>
+          <th></th>
+         </thead>
+         <tbody>
+          <tr ng-repeat="(i, selectedSkill) in selectedSkills track by $index">
+           <input type="hidden" ng-model="position.skills[i].skillId"/>
+           <td>{{selectedSkill.name}}</td>
+           <td>
+            <select name="skillLevelId" class="form-control" ng-model="position.skills[i].skillLevelId" ng-options="skillLevel._id as skillLevel.name for skillLevel in selectedSkill.levels" required ng-selected="">
+             <option value="">Selecciona un nivel</option> 
+            </select>
+            <p ng-show="editPositionForm.level.$invalid && !editPositionForm.level.$pristine" class="help-block">El nivel es requerido.</p>
+           </td>
+           <td>
+            <a href ng-click="remove($index)">Quitar</a>
+           </td>
+          </tr>
+         </tbody>
+        </table>
+       </div>
+
+       <div class="form-group">
+        <button type="submit" class="btn btn-default" ng-disabled="editPositionForm.$invalid">Editar</button> 
+        <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancelar</button> 
+       </div>
+
+      </form>
+     </modal>
+
+	  </div>
    </div>
   </div>
  </div>
