Se integro con passportjs

--- a/concepttest-app/public/views/index.html
+++ b/concepttest-app/public/views/index.html
@@ -34,8 +34,8 @@
    <div class="content-container" ng-class="{container: isLayoutHorizontal}" id="content" ng-view></div>
 
    <footer id="site-foot" class="site-foot clearfix">
-  <p class="left">&copy; Copyright 2016 <strong>CSTI | Chain Services Technology Information</strong>, All rights reserved.</p>
-  <p class="right">v1.0</p>
+    <p class="left">&copy; Copyright 2016 <strong>CSTI | Chain Services Technology Information</strong>, Todos los derechos reservados.</p>
+    <p class="right">v1.0</p>
    </footer>
   </div>
 
