Avance para signin, signup y rutas de servicio rest protegidas

--- a/concepttest-app/public/views/login.html
+++ b/concepttest-app/public/views/login.html
@@ -50,7 +50,7 @@
 
 	  <div class="clearfix text-center">
 	   <p>¿No tienes una cuenta?
-	    <a href="#/pages/register">
+	    <a href="/signup">
 	   	 Reg&iacute;strate
 	    </a>
 	   </p>
