--- a/concepttest-app/public/views/signup.html
+++ b/concepttest-app/public/views/signup.html
@@ -47,11 +47,11 @@
       </div>
       -->
       <div class="form-group form-group-lg">
-       <input class="form-control" type="text" placeholder="Nombre de usuario">
+       <input class="form-control" type="text" placeholder="Usuario" ng-model="user.username">
       </div>
 
       <div class="form-group form-group-lg">
-       <input class="form-control" type="password" placeholder="Contrase&ntilde;a">
+       <input class="form-control" type="password" placeholder="Contrase&ntilde;a" ng-model="user.password">
       </div>
 
       <!--
@@ -59,7 +59,7 @@
        <input class="form-control" type="email" placeholder="john@gmail.com">
       </div>
       -->
-      <button type="submit" class="btn btn-lg btn-primary text-uppercase">Registrate</button>
+      <button type="button" class="btn btn-lg btn-primary text-uppercase" ng-click="signup()">Registrate</button>
      </form>
     </div>
    </div>
