Ajustes para ir de login a homepage luego de autenticar

--- a/concepttest-app/public/views/login.html
+++ b/concepttest-app/public/views/login.html
@@ -25,7 +25,7 @@
   <!-- Match Media polyfill for IE9 -->
   <!--[if IE 9]><!--> <script src="scripts/ie/matchMedia.js"></script>  <!--<![endif]--> 
  </head>
- <body ng-app="loginapp" id="loginapp" ng-controller="Login">
+ <body ng-app="app.ui.login" id="app.ui.login" ng-controller="Login">
 
  <div class="page page-auth clearfix">
   <div class="auth-container">
@@ -86,7 +86,7 @@
  <script src="scripts/plugins/loading-bar.min.js"></script>
   
  <!-- Custom scripts -->
- <script src="scripts/app.js"></script>
+ <!--<script src="scripts/app.js"></script>-->
  <script src="scripts/shared/app.ctrls.js"></script>
  <script src="scripts/shared/app.directives.js"></script>
  <script src="scripts/ui/app.ui.ctrls.js"></script>
