Se coloco url de login

--- a/concepttest-app/public/views/header.html
+++ b/concepttest-app/public/views/header.html
@@ -28,7 +28,7 @@
 	 </div>
 	</div>
 	<div class="panel-footer clearfix">
-	 <a href="#/" class="btn btn-info btn-sm right">Cerrar sesi&oacute;n</a>
+	 <a href="/login" class="btn btn-info btn-sm right">Cerrar sesi&oacute;n</a>
 	</div>
    </div>
   </li>
