--- a/concepttest-app/public/views/nav.html
+++ b/concepttest-app/public/views/nav.html
@@ -2,6 +2,20 @@
  <div class="nav-title panel-heading"><i>Administraci&oacute;n</i></div>
  <ul class="list-unstyled nav-list">
   <li>
+   <a href="#/admin/manageTests">
+	<i class="fa fa-slideshare icon"></i>
+	<span class="text">Evaluaciones</span>
+	<i class="arrow fa fa-angle-right right"></i>
+   </a>
+  </li>
+  <li>
+   <a href="#/admin/manageQuestions">
+	<i class="fa fa-question icon"></i>
+	<span class="text">Cuestionarios</span>
+	<i class="arrow fa fa-angle-right right"></i>
+   </a>
+  </li>
+  <li>
    <a href="#/admin/managePositions">
 	<i class="fa fa-group icon"></i>
 	<span class="text">Cargos</span>
