Avance de administracion de preguntas

--- a/concepttest-app/public/views/nav.html
+++ b/concepttest-app/public/views/nav.html
@@ -11,7 +11,7 @@
   <li>
    <a href="#/admin/manageQuestions">
 	<i class="fa fa-question icon"></i>
-	<span class="text">Cuestionarios</span>
+	<span class="text">Preguntas</span>
 	<i class="arrow fa fa-angle-right right"></i>
    </a>
   </li>
