--- a/concepttest-app/public/views/nav.html
+++ b/concepttest-app/public/views/nav.html
@@ -2,22 +2,43 @@
  <div class="nav-title panel-heading"><i>Administraci&oacute;n</i></div>
  <ul class="list-unstyled nav-list">
   <li>
-   <a href="#/admin/manageTests">
+   <a href="#javascript:;">
 	<i class="fa fa-slideshare icon"></i>
 	<span class="text">Evaluaciones</span>
 	<i class="arrow fa fa-angle-right right"></i>
    </a>
+   <ul style="display: block;" class="inner-drop list-unstyled">
+    <li class="">
+     <a href="#/admin/manageTests">
+      <i class="fa fa-slideshare icon"></i>
+      Evaluaciones
+     </a>
+    </li>
+    <li class="">
+     <a href="#/admin/manageQuestions">
+      <i class="fa fa-question icon"></i>
+      Cuestionarios
+     </a>
+    </li>
+   </ul>
   </li>
   <li>
-   <a href="#/admin/manageQuestions">
-	<i class="fa fa-question icon"></i>
-	<span class="text">Preguntas</span>
-	<i class="arrow fa fa-angle-right right"></i>
+   <a href="#/admin/manageProjects">
+  <i class="fa fa-briefcase icon"></i>
+  <span class="text">Requerimientos</span>
+  <i class="arrow fa fa-angle-right right"></i>
+   </a>
+  </li>
+  <li>
+   <a href="#/admin/manageTeams">
+  <i class="fa fa-users icon"></i>
+  <span class="text">Equipos de trabajo</span>
+  <i class="arrow fa fa-angle-right right"></i>
    </a>
   </li>
   <li>
    <a href="#/admin/managePositions">
-	<i class="fa fa-group icon"></i>
+	<i class="fa fa-sitemap icon"></i>
 	<span class="text">Cargos</span>
 	<i class="arrow fa fa-angle-right right"></i>
    </a>
